--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
         <link href="./style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        
+    <header>
+        <nav>
+            <ul id="nav_bar">
+            <li class="nav-links" id="gmail"><a href="#">Gmail</a></li>
+            <li class="nav-links"><a href="#">Images</a></li>
+            <li id="sign_in"><a href="#">Sign In</a></li>
+            </ul>  
+        </nav>  
+    </header>  
+        <div class="google">
+        <a href="#" id="google_logo"><img src="http://www.google.com/logos/doodles/2015/googles-new-logo-5078286822539264.3-hp2x.gif" alt=" photo google-logo_zpspkcztsjo.png"/></a>
+        </div>
+        <div class="form">
+        <form>
+            <label for="form-search"></label>
+            <input type="text" id="form-search" placeholder="Search Google or type URL">
+        </form>
+        </div>
+
+
+
+
     </body>
 </html>
