changed size of logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>  
     </header>  
         <div class="google">
-        <a href="#" id="google_logo"><img src="http://www.google.com/logos/doodles/2015/googles-new-logo-5078286822539264.3-hp2x.gif" alt=" photo google-logo_zpspkcztsjo.png"/></a>
+        <a href="#" id="google_logo"><img src="http://www.google.com/logos/doodles/2015/googles-new-logo-5078286822539264.3-hp2x.gif" alt=" photo google-logo_zpspkcztsjo.png" height="200" width="500"/></a>
         </div>
         <div class="form">
         <form>
